html report customization

--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,8 @@
-test_advisor_portal=https://adviseur.test.portal.nn.insim.biz/
-acc_advisor_portal=https://adviseur.nn-acc.nl/
-#prod_adv_portal=https://adviseur.nn.nl/Welkom.htm?orgurl=/vp/
+#test_advisor_portal=https://adviseur.test.portal.nn.insim.biz/
+#acc_advisor_portal=https://adviseur.nn-acc.nl/
+##prod_adv_portal=https://adviseur.nn.nl/Welkom.htm?orgurl=/vp/
+
+automationpractice=https://rahulshettyacademy.com/AutomationPractice/
+googlepage=https://www.google.com/
+
+
