html report customization

--- a/config2.properties
+++ b/config2.properties
@@ -1,8 +1,9 @@
 #test_advisor_portal=https://adviseur.test.portal.nn.insim.biz/
 #acc_advisor_portal=https://adviseur.nn-acc.nl/
 ##prod_adv_portal=https://adviseur.nn.nl/Welkom.htm?orgurl=/vp/
-
 automationpractice=https://rahulshettyacademy.com/AutomationPractice/
 #googlepage=https://www.google.com/
+brokenimagepage=https://codepen.io/makaroni4/pen/WLzgpN
+#brokenimagepage=https://www.link-assistant.com/news/fixing-broken-images.html
 
 
