--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,11 @@
       <version>4.11.0</version>
     </dependency>
 
-
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.14.3</version> <!-- Use the latest version available -->
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
